// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MiqAlertStructuredList should render alert expression structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_alert_expression"
>
  <MiqStructuredListBody
    clickEvents={false}
    mode="miq_alert_expression"
    rows={
      Array [
        Object {
          "style": Object {
            "color": "black",
          },
          "value": "Expression1",
        },
        Object {
          "style": Object {
            "color": "black",
          },
          "value": "Expression2",
        },
        Object {
          "style": Object {
            "color": "black",
          },
          "value": "Expression3",
        },
      ]
    }
  />
</FeatureToggle(StructuredListWrapper)>
`;

exports[`MiqAlertStructuredList should render alert info structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_alert_info"
>
  <MiqStructuredListBody
    clickEvents={false}
    mode="miq_alert_info"
    rows={
      Array [
        Object {
          "label": "Description",
          "value": "bar",
        },
        Object {
          "label": "Active",
          "value": "Yes",
        },
        Object {
          "label": "Severity",
          "value": "",
        },
        Object {
          "label": "Based On",
          "value": "Server",
        },
        Object {
          "label": "Expression",
          "value": "Expression",
        },
        Object {
          "label": "What to Evaluate",
          "value": "What to evaluate",
        },
        Object {
          "label": "Driving Event",
          "value": "Hourly",
        },
        Object {
          "label": "Notification Frequency",
          "value": "1 Hour",
        },
      ]
    }
  />
</FeatureToggle(StructuredListWrapper)>
`;

exports[`MiqAlertStructuredList should render alert management event structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_alert_management_event"
>
  <MiqStructuredListBody
    clickEvents={false}
    mode="miq_alert_management_event"
    rows={
      Array [
        Object {
          "label": "Event Name",
          "value": "Event name",
        },
      ]
    }
  />
</FeatureToggle(StructuredListWrapper)>
`;

exports[`MiqAlertStructuredList should render alert parameter structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_alert_parameters"
>
  <MiqStructuredListBody
    clickEvents={false}
    mode="miq_alert_parameters"
    rows={
      Array [
        Object {
          "label": "Description type 1",
          "value": "type1 value1",
        },
        Object {
          "label": "Description type 2",
          "value": Array [
            Object {
              "value": "type2 value1",
            },
            Object {
              "value": "type2 value2",
            },
          ],
        },
        Object {
          "label": "Description type 3",
          "style": Object {
            "color": "red",
          },
          "value": "type3 value1",
        },
      ]
    }
  />
</FeatureToggle(StructuredListWrapper)>
`;

exports[`MiqAlertStructuredList should render alert profile structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_alert_profiles"
>
  <MiqStructuredListBody
    clickEvents={false}
    mode="miq_alert_profiles"
    onClick={[MockFunction]}
    rows={
      Array [
        Object {
          "cells": Array [
            Object {
              "icon": "pficon pficon-warning-triangle-o",
              "value": "Alert description",
            },
          ],
          "onclick": Object {
            "url": "/miq_alert_set/show/1",
          },
          "title": "View this Alert Profile",
        },
        Object {
          "cells": Array [
            Object {
              "icon": "pficon pficon-warning-triangle-o",
              "value": "Alert description",
            },
          ],
          "onclick": Object {
            "url": "/miq_alert_set/show/2",
          },
          "title": "View this Alert Profile",
        },
        Object {
          "cells": Array [
            Object {
              "icon": "pficon pficon-warning-triangle-o",
              "value": "Alert description",
            },
          ],
          "onclick": Object {
            "url": "/miq_alert_set/show/3",
          },
          "title": "View this Alert Profile",
        },
      ]
    }
  />
</FeatureToggle(StructuredListWrapper)>
`;

exports[`MiqAlertStructuredList should render alert referenced structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_alert_referenced"
>
  <MiqStructuredListBody
    clickEvents={false}
    mode="miq_alert_referenced"
    onClick={[MockFunction]}
    rows={
      Array [
        Object {
          "cells": Array [
            Object {
              "icon": "pficon pficon-warning-triangle-o",
              "value": "Alert description",
            },
          ],
          "onclick": Object {
            "url": "/miq_action/show/1",
          },
          "title": "View this Action",
        },
        Object {
          "cells": Array [
            Object {
              "icon": "pficon pficon-warning-triangle-o",
              "value": "Alert description",
            },
          ],
          "onclick": Object {
            "url": "/miq_action/show/2",
          },
          "title": "View this Action",
        },
        Object {
          "cells": Array [
            Object {
              "icon": "pficon pficon-warning-triangle-o",
              "value": "Alert description",
            },
          ],
          "onclick": Object {
            "url": "/miq_action/show/3",
          },
          "title": "View this Action",
        },
      ]
    }
  />
</FeatureToggle(StructuredListWrapper)>
`;

exports[`MiqAlertStructuredList should render alert sms structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_alert_send_sms"
>
  <MiqStructuredListBody
    clickEvents={false}
    mode="miq_alert_send_sms"
    rows={
      Array [
        Object {
          "label": "Host",
          "value": Array [
            Object {
              "value": "value1",
            },
            Object {
              "value": "value2",
            },
          ],
        },
        Object {
          "label": "Version",
          "value": Array [
            Object {
              "value": "value1",
            },
            Object {
              "value": "value2",
            },
          ],
        },
        Object {
          "label": "Trap Number",
          "value": "123",
        },
      ]
    }
  />
</FeatureToggle(StructuredListWrapper)>
`;

exports[`MiqAlertStructuredList should render alert timeline event structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_alert_timeline_event"
>
  <MiqStructuredListBody
    clickEvents={false}
    mode="miq_alert_timeline_event"
    rows={
      Array [
        Object {
          "label": "Show on Timeline",
          "value": "True",
        },
      ]
    }
  />
</FeatureToggle(StructuredListWrapper)>
`;

exports[`MiqAlertStructuredList should render alert variable structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_alert_variable"
>
  <MiqStructuredListBody
    clickEvents={false}
    mode="miq_alert_variable"
    rows={
      Array [
        Array [
          "object_id",
          "type",
          "value",
        ],
        Array [
          "object_id",
          "type",
          "value",
        ],
        Array [
          "object_id",
          "type",
          "value",
        ],
      ]
    }
  />
</FeatureToggle(StructuredListWrapper)>
`;
